# ast-grep-mcp

./: .gitignore  ADDITIONAL_FIXES_SUMMARY.md  AST_GREP_FIXES_SUMMARY.md  CLAUDE.md  COMPREHENSIVE_PAIN_POINT_FIXES.md  CRITICAL_FIXES_SUMMARY.md  ENHANCEMENT_SUMMARY.md  FINAL_IMPROVEMENTS_SUMMARY.md  FIXES_IMPLEMENTED.md  IMPROVEMENTS_IMPLEMENTED.md  IMPROVEMENTS_SUMMARY.md  LICENSE  PAIN_POINT_FIXES_SUMMARY.md  README.md  SECOND_ASSESSMENT_IMPROVEMENTS.md  TROUBLESHOOTING.md  analyze_codebase.py  ast-grep-analysis-summary.md  ast-grep-analysis.json  ast-grep-enhancements.md  ast-grep-mcp.md  ast-grep-patterns.yml  code_quality_improvements.md  codebase-analysis.md  commit-message.txt  debug_find_functions.py  improvements-to-make.md  main.py  mcp.json  migrate-to-uv.md  pyproject.toml  regex-usage-analysis.md  test_mcp_client.py  test_pain_point_fixes.py
.cursor/rules/: adding-language-support.mdc  error-handling.mdc  logging-system.mdc  mcp-tools.mdc  pattern-examples.mdc  performance-optimization.mdc  project-structure.mdc  server-architecture.mdc
.github/workflows/: ast-grep-code-analysis.yml  python-ci.yml
docs/: adding-language-support.md  architecture.md  ast-grep-pattern-reference.md  coding_standards.md  configuration.md  docs-checklist.md  enhanced-features.md  implementation-plan.md  pattern-documentation.md  pattern-library.md  pattern-quick-reference.md  pattern-suggestions.md  pattern-syntax-comprehensive.md  pattern-syntax-guide.md  pattern-syntax.md  pattern-templates.md  rust-pattern-cookbook.md  security-guide.md  testing-strategy.md  usage-guide.md
examples/: debug_rust_patterns.py  enhanced_features_demo.py  improved_workflow_demo.py  mcp_client_example.py  new_features_demo.py  pattern_examples.py  rust_async_functions_demo.py  test_comprehensive_fixes.py  test_critical_fixes.py  test_enhanced_features.py  test_rust_function_patterns.py
integration_tests/: __init__.py  client_test.py
rules/: javascript-best-practices.yaml  python-security.yaml  rust-security-enhanced.yaml  rust-security.yaml
scripts/: check_ast_grep_issues.py  commit-fixes.sh  install_deps.sh  new_language.py  setup_git_hooks.py
src/ast_grep_mcp/: __main__.py  ast_analyzer.py  ast_analyzer_v2.py  server.py
tests/: __init__.py  comprehensive_tests.py  debug_handlers.py  improved_integration_tests.py  mocked_integration_tests.py  test_ast_analyzer.py  test_cli.py  test_core.py  test_error_handling.py  test_improvements.py  test_javascript_refactoring.py  test_logging.py  test_native_metavars.py  test_optimizations.py  test_pattern_autocorrect.py  test_pattern_diagnostics.py  test_pattern_helpers.py  test_performance.py  test_remaining_improvements.py  test_second_assessment_fixes.py  test_security.py  test_security_integration.py  test_server.py  test_smoke.py  test_utils.py
tests/core/: test_config.py  test_diagnostics.py  test_enhanced_refactoring.py
(+57 files in other folders)
