[project]
name = "ast-grep-mcp"
version = "0.1.0"
description = "MCP server using ast-grep for code analysis and refactoring"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ast_grep_py>=0.37.0",
    "fastmcp>=0.1.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
]

[project.optional-dependencies]
extra-languages = [
    "tree-sitter-lua>=0.0.14",
    "tree-sitter-go>=0.20.0",
]
